Fix table column wrapping for the shopping-cart and item-table

--- a/data-showcase/src/main/user-interface/src/app/shopping-cart/shopping-cart.component.css
+++ b/data-showcase/src/main/user-interface/src/app/shopping-cart/shopping-cart.component.css
@@ -10,7 +10,7 @@
     cursor:pointer;
 }
 
-.table_content {
+.table-content {
     text-align: left !important;
 }
 .ui-dialog-footer {
